--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./css/colors.css";
+
+body, html {
+  background-color: var(--color-blue-grey-900);
+  color: white;
+  margin: 0;
+  height: 100vh;
+}
+
+* {
+  color: inherit;
+}
