--- a/src/partials/top-nav/top-nav.component.css
+++ b/src/partials/top-nav/top-nav.component.css
@@ -3,7 +3,10 @@
 }
 
 nav {
-  display: block;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 12px;
   height: 48px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 0 0px rgba(0,0,0, 0.31);
   position: fixed;
@@ -11,4 +14,6 @@ nav {
   left: 0;
   right: 0;
   background-color: var(--color-blue-grey-900);
+
+
 }
