--- a/src/styles.css
+++ b/src/styles.css
@@ -10,4 +10,6 @@ body, html {
 
 * {
   color: inherit;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Noto Sans", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+  text-rendering: optimizeLegibility;
 }
