--- a/src/partials/top-nav/top-nav.component.html
+++ b/src/partials/top-nav/top-nav.component.html
@@ -1,7 +1,5 @@
 <div class="boundary"></div>
 <nav>
   <div>{{ topNavService.title }}</div>
-  <div>
-    something
-  </div>
+  <ng-container #container></ng-container>
 </nav>
