--- a/src/partials/bottom-nav/bottom-nav.component.css
+++ b/src/partials/bottom-nav/bottom-nav.component.css
@@ -8,7 +8,9 @@ nav {
   transition: transform ease-in-out 0.15s;
   display: flex;
   height: 80px;
-  box-shadow: 0 -1px 5px rgba(0, 0, 0, 0.25), 0 0 0px rgba(0, 0, 0, 0.31);
+  box-shadow:
+    0 -1px 5px rgba(0, 0, 0, 0.25),
+    0 0 0px rgba(0, 0, 0, 0.31);
   position: fixed;
   bottom: 0;
   left: 0;
