--- a/src/partials/top-nav/top-nav.component.css
+++ b/src/partials/top-nav/top-nav.component.css
@@ -8,12 +8,12 @@ nav {
   align-items: center;
   padding: 0 12px;
   height: 48px;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25), 0 0 0px rgba(0,0,0, 0.31);
+  box-shadow:
+    0 1px 5px rgba(0, 0, 0, 0.25),
+    0 0 0px rgba(0, 0, 0, 0.31);
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   background-color: var(--color-blue-grey-900);
-
-
 }
