--- a/src/styles.css
+++ b/src/styles.css
@@ -15,4 +15,5 @@ html {
     -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji';
   text-rendering: optimizeLegibility;
+  box-sizing: border-box;
 }
