--- a/src/partials/bottom-nav/bottom-nav.component.css
+++ b/src/partials/bottom-nav/bottom-nav.component.css
@@ -1,16 +1,17 @@
 .bottom-nav-boundary {
-  height: 80px;
-  max-height: 80px;
+  height: var(--height-bottom-nav);
+  max-height: var(--height-bottom-nav);
   transition: transform ease-in-out 0.15s;
 }
 
 nav {
   transition: transform ease-in-out 0.15s;
   display: flex;
-  height: 80px;
+  height: var(--height-bottom-nav);
   box-shadow:
     0 -1px 5px rgba(0, 0, 0, 0.25),
     0 0 0px rgba(0, 0, 0, 0.31);
+  z-index: 4;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -49,6 +50,6 @@ button {
   }
 
   nav {
-    transform: translateY(110%);
+    transform: translateY(calc(var(--height-bottom-nav) + 4px));
   }
 }
