--- a/src/partials/top-nav/top-nav.component.css
+++ b/src/partials/top-nav/top-nav.component.css
@@ -11,6 +11,7 @@ nav {
   box-shadow:
     0 1px 5px rgba(0, 0, 0, 0.25),
     0 0 0px rgba(0, 0, 0, 0.31);
+  z-index: 2;
   position: fixed;
   top: 0;
   left: 0;
