--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -288,5 +288,6 @@
   --color-blue-grey-600: #546e7a;
   --color-blue-grey-700: #455a64;
   --color-blue-grey-800: #37474f;
+  --color-blue-grey-850: #2f3c42;
   --color-blue-grey-900: #263238;
 }
