--- a/src/pages/workout-current/workout-current-page.component.html
+++ b/src/pages/workout-current/workout-current-page.component.html
@@ -1,7 +1,10 @@
 <section class="workout-title" (click)="openPanel()">Current Exercise</section>
 
-<section class="workout">
+<section class="workout-body">
   <nav>
-    <button (click)="closePanel()">Hide</button>
+    <button (click)="closePanel()">
+      <img src="icons/chevron-down.svg" />
+    </button>
+    <button class="finish" (click)="closePanel()">FINISH</button>
   </nav>
 </section>
