--- a/src/partials/top-nav/top-nav.component.css
+++ b/src/partials/top-nav/top-nav.component.css
@@ -1,5 +1,6 @@
-.boundary {
-  height: 48px;
+.boundary,
+nav {
+  height: var(--height-top-nav);
 }
 
 nav {
@@ -7,7 +8,6 @@ nav {
   justify-content: space-between;
   align-items: center;
   padding: 0 12px;
-  height: 48px;
   box-shadow:
     0 1px 5px rgba(0, 0, 0, 0.15),
     0 0 0px rgba(0, 0, 0, 0.2);
