--- a/src/pages/workout-current/workout-current-page.component.html
+++ b/src/pages/workout-current/workout-current-page.component.html
@@ -5,6 +5,6 @@
     <button (click)="closePanel()">
       <img src="icons/chevron-down.svg" />
     </button>
-    <button class="finish" (click)="closePanel()">FINISH</button>
+    <button class="finish" (click)="finishWorkout()">FINISH</button>
   </nav>
 </section>
