--- a/src/styles.css
+++ b/src/styles.css
@@ -18,6 +18,18 @@ html {
   box-sizing: border-box;
 }
 
+.content-max-width {
+  padding: 16px 3%;
+}
+
+@media (min-width: 1280px) {
+  .content-max-width {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 0;
+  }
+}
+
 h1 {
   margin-top: 0;
   font-size: 18px;
