--- a/src/pages/workout-current/workout-current-page.component.html
+++ b/src/pages/workout-current/workout-current-page.component.html
@@ -1,4 +1,6 @@
-<section class="workout-peak" (click)="openPanel()">Current Exercise</section>
+<section class="workout-peak" (click)="openPanel()">
+  {{ workout?.title || 'Unnamed Workout' }}
+</section>
 
 <section class="workout-body">
   <nav>
