--- a/src/pages/profile/profile-page.component.html
+++ b/src/pages/profile/profile-page.component.html
@@ -1,1 +1,4 @@
-<!-- <button (click)="toggle()">Toggle</button> -->
+<app-navigation-top>
+  <h1>Profile</h1>
+  <app-page-profile-navigation></app-page-profile-navigation>
+</app-navigation-top>
