--- a/src/pages/workout/workout-page.component.html
+++ b/src/pages/workout/workout-page.component.html
@@ -1,3 +1,7 @@
+<app-navigation-top>
+  <h1>Workout</h1>
+</app-navigation-top>
+
 <h1>Quick Start</h1>
 
 <button *ngIf="workout === null" class="start-workout" (click)="startNewWorkout()">
