--- a/src/pages/workout-detail/workout-detail-page.component.css
+++ b/src/pages/workout-detail/workout-detail-page.component.css
@@ -1,56 +1,43 @@
-.exercise {
-  border: 1px solid var(--color-grey-700);
-  border-radius: 4px;
+:host {
+  display: block;
+  position: relative;
+  z-index: 4;
+  z-index: 10;
+  min-height: 100dvh;
+  background-color: var(--color-blue-grey-900);
+}
+
+article {
   margin-bottom: 12px;
-  padding: 8px;
+}
 
-  h1 {
-    font-size: 16px;
-    font-weight: 400;
-    margin-bottom: 4px;
+.entry {
+  display: flex;
+  justify-content: space-between;
+  color: var(--color-grey-500);
+  white-space: pre;
+
+  &.title {
+    color: white;
   }
 
-  time {
+  .pad-end {
+    display: inline-block;
+    min-width: 90px;
+  }
+}
+
+footer {
+  .content {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 3%;
+  }
+
+  .btn {
+    width: 100%;
     display: block;
-    font-size: 14px;
-    color: var(--color-grey-500);
-    margin-bottom: 12px;
-  }
-
-  .breakdown {
-    & > div {
-      display: flex;
-      font-size: 14px;
-      color: var(--color-grey-500);
-
-      &.title {
-        color: white;
-      }
-
-      & > div:first-child {
-        flex: 1;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-      }
-
-      & > div:last-child {
-        width: 80px;
-      }
-    }
-  }
-
-  .summary {
-    > div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 14px;
-    }
-
-    img {
-      height: 20px;
-      opacity: 0.5;
-    }
   }
 }
