--- a/src/partials/bottom-nav/bottom-nav.component.css
+++ b/src/partials/bottom-nav/bottom-nav.component.css
@@ -1,3 +1,9 @@
+:host {
+  display: block;
+  position: relative;
+  z-index: 3;
+}
+
 .bottom-nav-boundary {
   height: var(--height-bottom-nav);
   max-height: var(--height-bottom-nav);
