--- a/src/pages/workout-detail/workout-detail-page.component.css
+++ b/src/pages/workout-detail/workout-detail-page.component.css
@@ -11,6 +11,18 @@ article {
   margin-bottom: 12px;
 }
 
+h1 {
+  font-weight: 500;
+  margin-bottom: 4px;
+}
+
+time {
+  display: block;
+  font-size: 14px;
+  color: var(--color-grey-500);
+  margin-bottom: 12px;
+}
+
 .entry {
   display: flex;
   justify-content: space-between;
