clear data for debugging

--- a/src/pages/profile/profile-page.component.html
+++ b/src/pages/profile/profile-page.component.html
@@ -2,3 +2,7 @@
   <h1>Profile</h1>
   <app-page-profile-navigation></app-page-profile-navigation>
 </app-navigation-top>
+
+<div class="content-max-width">
+  <button (click)="clearStorage()" class="btn">CLEAR ALL DATA</button>
+</div>
