--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,11 @@ html {
   padding: 16px 3%;
 }
 
+main {
+  padding-left: 3%;
+  padding-right: 3%;
+}
+
 @media (min-width: 1280px) {
   .content-max-width {
     max-width: 1280px;
@@ -78,7 +83,22 @@ footer {
     background-color: var(--color-red-500);
   }
 
+  &.input {
+    justify-content: flex-start;
+    background-color: var(--color-blue-grey-850);
+  }
+
   &:disabled {
     opacity: 0.7;
   }
+}
+
+.input {
+  background-color: var(--color-blue-grey-850);
+  width: 100%;
+  border: none;
+  border-radius: 4px;
+  padding: 12px 8px;
+  display: block;
+  flex: 1;
 }
