--- a/src/pages/exercises/exercises-page.component.html
+++ b/src/pages/exercises/exercises-page.component.html
@@ -3,8 +3,18 @@
   <app-page-exercises-navigation></app-page-exercises-navigation>
 </app-navigation-top>
 
-<div class="content-max-width">
-  <article *ngFor="let exercise of exerciseListService.exercises()">
+<main>
+  <div class="filter">
+    <input
+      (input)="applyFilter($event.target.value)"
+      class="input"
+      type="text"
+      placeholder="Filter"
+    />
+  </div>
+  <div class="filter-padding"></div>
+
+  <article *ngFor="let exercise of exerciseList()">
     {{ exercise }}
   </article>
-</div>
+</main>
