added settings page and donate button

--- a/src/partials/bottom-nav/bottom-nav.component.html
+++ b/src/partials/bottom-nav/bottom-nav.component.html
@@ -1,27 +1,27 @@
 <div class="bottom-nav-boundary" *ngIf="bottomNavService.enabled()"></div>
 <!-- <nav *ngIf="bottomNavService.enabled()"> -->
 <nav>
-  <button routerLink="profile" routerLinkActive="active">
+  <button routerLink="/profile" routerLinkActive="active">
     <img src="icons/profile.svg" />
     <p>Profile</p>
   </button>
 
-  <button routerLink="history" routerLinkActive="active">
+  <button routerLink="/history" routerLinkActive="active">
     <img src="icons/clock.svg" />
     <p>History</p>
   </button>
 
-  <button routerLink="workout" routerLinkActive="active">
+  <button routerLink="/workout" routerLinkActive="active">
     <img src="icons/plus.svg" />
     <p>Workout</p>
   </button>
 
-  <button routerLink="exercises" routerLinkActive="active">
+  <button routerLink="/exercises" routerLinkActive="active">
     <img src="icons/dumbell.svg" />
     <p>Exercises</p>
   </button>
 
-  <button routerLink="measure" routerLinkActive="active">
+  <button routerLink="/measure" routerLinkActive="active">
     <img src="icons/ruler.svg" />
     <p>Measure</p>
   </button>
