Move clear data to settings page

--- a/src/pages/settings/settings-page.component.html
+++ b/src/pages/settings/settings-page.component.html
@@ -15,4 +15,5 @@
   <h1>Utilities</h1>
   <button class="btn">Import: Strong App (TODO)</button>
   <button class="btn">Export Data (TODO)</button>
+  <button (click)="clearStorage()" class="btn">CLEAR ALL DATA</button>
 </main>
